# MolSym

./: .gitignore  .readthedocs.yaml  LICENSE.txt  PsiCon_2023.ipynb  README.md  acetylene.xyz  base.yaml  codecov.yaml  environment.yml  input.py  nate.xyz  nate_sand.py  o2.xyz  pyproject.toml  requirements.txt  sandbox.prof  sandbox.py
.github/workflows/: build-dist.yaml  publish.yaml  workflow.yml
devtools/conda-envs/: base.yaml
docs/: api.rst  conf.py  index.md  index.rst  requirements.txt  usage.rst
docs/_templates/: class.rst
molsym/: __init__.py  flowchart.py  molecule.py  symmetrize.py  symtools.py  test.py
molsym/pgdetect/: flowchart.py  flowchart_helper.py
molsym/salcs/: IC_SALCs.py  RSH_SALCs.py  RSHoperations.py  SymmetryEquivalentIC.py  __init__.py  axial_vector_functions.py  cartesian_coordinates.py  function_set.py  internal_coordinates.py  linear_functions.py  old_internal_coordinates.py  polynomial_functions.py  projection_op.py  salc.py  salc_tools.py  spherical_harmonics.py
molsym/symtext/: Ih_irrep_mats.py  character_table.py  character_table_generators.py  general_irrep_mats.py  goat.py  irrep_mats.py  main.py  multiplication_table.py  point_group.py  symel.py  symel_generators.py  symtext.py  (+1 more)
rhf/: bdmats.py  dpd.py  hf.py  input.py  nohup.out  tz_benzene
test/: conftest.py  dont_symels.py  test_axial_vector_functions.py  test_character_tables.py  test_find_pg.py  test_ics.py  test_irrep_mats.py  test_molecule.py  test_new_generator.py  test_old_bugs.py  test_polynomial_functions.py  test_projection_op.py  test_psi4_pgbits.py  test_salc_tools.py  test_symels.py  test_symtext.py
(+18 files in other folders)
